package lab.classes.location;

public class Moon extends Location {
   public Moon() {
      super("Луна");
   }
}
