package lab.interfaces;

import lab.classes.being.Being;

public interface IHavingSeat {
   public ISeatable getFreeSeat(Being obj);
}
