package lab.records;

public record Duty(String name, float wage, int days) {}