package lab.classes.location;

public class Cave extends Location {
   public Cave() {
      super("Пещера");
   }
}
