package lab.classes.container;

public class Bowl extends Container {
   public Bowl(double size) {
      super("Тарелка", size);
   }
}