package lab.classes.place;

public class Underground extends Place {
   public Underground() {
      super("Подлунный мир");
   }
}
