package lab.enums;

public enum Effect {
   NORMAL,
   SHOCKED,
   UNCONSCIOUS
}