package lab.interfaces;

public interface ICapitalisticPassive {
   public final float DEFAULT_COST = 10.0f;

   float cost();
}