package lab.interfaces;

public interface IMeasurable {
   boolean canFit(float size);
}