package lab.interfaces;

public interface ISeatable {
   public boolean inUse();
   public void setState(boolean state);
   public double getSize();
}