package lab.records;

public record SocialOrganization(String name) {}
