@startuml name
Being <|-- LittleGuy
ICapitalisticActive <|.. LittleGuy : implements
ISociable <|.. LittleGuy : implements

object ponchik
object piluylkin
object neznayka

LittleGuy <|-- ponchik
LittleGuy <|-- piluylkin
LittleGuy <|-- neznayka

object borscht
object porridge
object salt
Eatable <|-- borscht
Eatable <|-- porridge
Eatable <|-- salt

ICapitalisticPassive <|.. Container : implements
ICapitalisticPassive <|.. Eatable : implements

IMeasurable <|.. Eatable : implements
IMeasurable <|.. Container : implements
IMeasurable <|.. Being : implements

Container <|-- Bowl
Container <|-- Table

IHavingSeat <|.. Table : implements

ISeatHandler <|.. SeatableHandler : implements

Table +-- Chair
ISeatable <|-- Chair

Transport <|-- Rocket
Transport +-- Seat
ISeatable <|.. Seat : implements
Rocket +-- PassengerSeat

Rocket +-- LuggageSection
Container <|-- LuggageSection

ILocatable <|.. Transport : implements
ILocatable <|.. Being : implements

Location <|-- Moon
Location <|-- Planet
Location <|-- Underground
Location <|-- Town
Location <|-- Cave

Seat <|-- PassengerSeat

IReservingSeat <|.. Transport : implements

Log +-- Console

"Exception" <|-- BusyWithSeatable
"Exception" <|-- RuntimeException
RuntimeException <|-- HungerOverflow
RuntimeException <|-- NegativeBalance

static class Log {
   {static} +String warnDecorate(line: String)
}

static class Console {
   {static} +void print(message: Object)
   {static} +void printf(message: String, Object ... args)
   {static} +void println(message: Object)
}

class LittleGuy {
   -duty: Duty
   -balance: float
   -socialStatusList: List<SocialStatus>
   -workingDays: int
   +LittleGuy(name)
   +LittleGuy(name, size)
}

abstract class Seat {
   -size: double
   -inUse: boolean
   -name: String
   #Seat(name: String, size: double)
}

class PassengerSeat {
   +PassengerSeat(size: double)
}

enum Effect {
   NORMAL
   SHOCKED
   UNCONSCIOUS
}

interface IHavingSeat {
   +ISeatable getFreeSeat(obj: Being)
}

interface ICapitalisticPassive {
   DEFAULT_COST: float
   +float cost()
}

interface ICapitalisticActive {
   +float getBalance()
   +void setBalace(balance: float)
   +Duty getDuty()
   +void setDuty(duty: Duty)
   +void sell(obj: ICapitalisticPassive)
   +void buy(obj: ICapitalisticPassive)
   +void work()
}

interface ISeatable {
   +boolean inUse()
   +void setState(state: boolean)
   +double getSize()
}

interface ISeatHandler {
   +void reserveSeat(being: Being, obj: IHavingSeat)
   +void reserveSeat(being: Being, obj: IReservingSeat)
   +void exitSeat(obj: Being)
   +ISeatable getSeat()

}

interface ISociable {
   +void addSocialStatus(obj: SocialStatus)
   +void popSocialStatus()
   +List<SocialStatus> getSocialStatuses()
}

interface IReservingSeat {
   +ISeatable reserveFreeSeat(obj: Being)
   +void notifyOnExit(obj: Being)
}

abstract class Being {
   -name: String
   -type: String
   -size: double
   -hunger: byte
   -location: Location
   -effect: Effect
   -seat: ISeatHandler
   #Being(name: String, type: String, size: double)
   #byte getHunger()
   #void setHunger(hunger: byte)
   #void addHunger(hunger: byte)
   #void subHunger(hunger: byte)
   +void setEffect(effect: Effect)
   +Effect getEffect()
   +void updateHungerEffect()
   +boolean eat(obj: Eatable)
   +boolean eat(obj: Eatable, eatingSpeed: byte)
   +void eatIterative(obj: Container)
   +void eatIterative(obj: Container, eatingSpeed: byte)
   +ISeatHandler getSeatHandler()
   +void seat(obj: IHavingSeat)
   +void seat(obj: IReservingSeat)
   +void getUp()
   +void sleep()
   +void goTo(location: Location)
}

class Eatable << (R,#FF7700) >> {
   -name: String
   -saturation: byte
   -cost: float
   +Eatable(name: String, saturation: byte)
   +Eatable(name: String, saturation: byte, cost: float)
   +Eatable(name: String, saturation: byte, size: double, cost: float)
}

class Duty << (R,#FF7700) >> {
   -name: String
   -wage: float
   -days: int
   +Duty(name: String, wage: float, days: int)
}

class Exception << (X,#d83614) >>

class RuntimeException << (X,#d83614) >>

class BusyWithSeatable << (X,#d83614) >> {
   +BusyWithSeatable(obj: Being)
}

class HungerOverflow << (X,#d83614) >> {
   +HungerOverflow(obj: Being)
}

class NegativeBalance << (X,#d83614) >> {
   +NegativeBalance(obj: ICapitalisticActive)
}

class Duty << (R,#FF7700) >> {
   -name: String
   -wage: float
   -days: int
   +Duty(name: String, wage: float, days: int)
}

class SocialStatus << (R,#FF7700) >> {
   -name: String
   -organization: SocialOrganization
   +SocialStatus(name: String, organization: SocialOrganization)
   +String toString()
}

class SocialOrganization << (R,#FF7700) >> {
   -name: String
   +SocialOrganization(name: String)
   +String toString()
}

class SeatableHandler {
   -parent: IReservingSeat
   -currSeat: ISeatable
}

abstract class Transport {
   -name: String
   -location: Location
   -passengerSet: Set<Being>
   -seatList: List<Seat>
   #Transport(name: String, location: Location)
   {abstract} void initSeats(seatsCount: int, size: double)
   +Set<Being> getPassengers()
   +List<Seat> getSeats()
}

abstract class Container {
   -name: String
   -size: double
   -spaceLeft: double
   -cost: float
   -content: Set<IMeasurable>
   +Container(name: String, size: double)
   +Container(name: String, size: double, cost: float)
   +void addItem(obj: IMeasurable)
   +void delItem(obj: IMeasurable)
   +Set<IMeasurable> getItems()
}

class Table {
   -chairs: List<Chair>
   +Table(size: double)
   +Table(size: double, cost: float)
   +initChairs(num: int, size: double)
}

class Chair {
   -size: double
   -inUse: boolean
   +Chair(size: double)
}

class Bowl {
   +Bowl()
}

class LuggageSection {
   +LuggageSection()
}

class Rocket {
   -luggage: LuggageSection
   +Rocket(location: Location, seatsCount: int, size: double)
   +LuggageSection getLuggage();
}

class Moon {
   +Moon()
}

class Planet {
   +Planet()
   +Planet(name: String)
}

class Town {
   +Town()
   +Town(name: String)
}

class Underground {
   +Underground()
}

class Cave {
   +Cave()
}

abstract class Location {
   -name: String
   -parent: Location
   -Set<Being> visitorSet: Being
   #Location(name)
   +void setParent(obj: Location)
   +String getName()
   +void addVisitor(obj: Being)
   +void delVisitor(obj: Being)
   +Set<Being> getVisitors()
   +String toString()
}

interface IMeasurable {
   +boolean canFit(size: double)
   +double getSize()
}

interface ILocatable {
   +Location getLocation()
   +void setLocation(obj: Location)
}
@enduml

' make size attribute to define whether the item can be keepable in the Container or not